yaml/deployment/gin-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-demo
spec:
  selector:
    matchLabels:
      app: gin-demo
  replicas: 2
  template:
    metadata:
      labels:
        app: gin-demo
    spec:
      containers:
      - name: cn01
        imagePullPolicy: Always
        image: harbor.ym/opstest/little-web:v0.0.2
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
