yaml/deployment/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  strategy: # 用于滚动更新时的策略限制
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template: # PodTemplate模板 ~ Pod对象
    metadata:
      labels:
        app: nginx
    spec: # PodSpec
      containers:
      - name: cn0
        imagePullPolicy: Always
        # image: nginx:1.7.9
        image: nginx:1.9.1
        ports:
        - containerPort: 80
