yaml/deployment/prac.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      restartPolicy: Always
      containers:
      - name: cn0
        image: nginx
        ports:
        - containerPort: 80
