yaml/deployment/gin-demo-servcie.yaml
apiVersion: v1
kind: Service
metadata:
  name: gin-demo-service
spec:
#   type: NodePort
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    # nodePort: 32145
  selector:
    app: gin-demo
